# minifs

./: .gitignore  CMakeLists.txt  README.md  init.c  main.c
src/: params.h
src/commands/: commands.c  commands.h
src/data_structures/: inode.c  inode.h  sector.c  sector.h  superblock.c  superblock.h
src/io/: fsio.c  fsio.h
